data/themes/ansel.css
/* ... */
.dt_group_top  ,
.thumb-main.dt_group_top:selected
{
  border-top: 0.1em solid rgb(255, 187, 0);
}

.dt_group_right  ,
.thumb-main.dt_group_right:selected
{
  border-right: 0.1em solid rgb(255, 187, 0);
}

.dt_group_bottom  ,
.thumb-main.dt_group_bottom:selected
{
  border-bottom: 0.1em solid rgb(255, 187, 0);
}

.dt_thumbtable_reorder .thumb-main:hover
{
  border-left : 4px solid rgb(255, 187, 0);
}

/*----------------------------------------
  - Popover overlays menu from star icon and grid lines -
  ----------------------------------------*/
#show-tooltip
{
  margin: 0.28em 0 0 0.28em;
  border-top: 0.07em dashed @button_border;
}

  /*** for following settings line, remember which popover mode name and related line on popover menu
  1) .dt_overlays_none
  2) .dt_overlays_hover
  3) .dt_overlays_hover_extended
  4) .dt_overlays_always
  5) .dt_overlays_always_extended
  6) .dt_overlays_mixed
  7) .dt_overlays_hover_block (also to set culling and preview hover block infos)

  These modes will be ordered on next related lines ***/

/*---------------
  - Bottom area -
  ---------------*/
.thumb-bottom
{
  border: 0;
  margin: 0;
  padding: 0 3px 3px 3px;
}

.thumb-top
{
  border: 0;
  margin: 0;
  padding: 3px 3px 0 3px;
}

/* Set background on thumbnails hover overlays */
.dt_overlays_hover .thumb-main:hover .thumb-bottom,
.dt_overlays_hover .thumb-main:selected .thumb-bottom
{
  background-image: linear-gradient(rgba(198, 198, 198, 0.7) 0%, rgba(198, 198, 198, 0.7) 90%,rgba(198, 198, 198, 0) 100%);  /* rgb color needs to be set to same color as #thumb-back hover background */
}

/* Set background on block infos in last overlay mode and culling/preview modes shown with mouse hover */
.dt_overlays_hover_block .thumb-image:hover .thumb-bottom
{
  background-image: none;
  background-color: rgba(220, 220, 220, 0.8);
}

/*--------------------
  - Thumbnails infos -
  --------------------*/
/* set some padding for some icons */
.thumb-star
{
  margin: 0 0.125em;
}

.thumb-reject
{
  margin-right: 0.25em;
}

.thumb-colorlabels
{
  margin-left: 0.25em;
  opacity: 0.8;
}

.thumb-alternative
{
  background-color: rgba(255, 255, 255, 0.7);
  border: 1px solid #666;
  padding: 0.5em;
}

.thumb-alternative *
{
  color: black;
  font-size: 100%;
  font-weight: 700;
}

.thumb-alternative separator
{
  color: #666;
  min-height: 1px;
}

/* Reset color icons to be hidden in following modes, including culling/preview overlays hover block*/
.dt_overlays_none .dt_thumb_btn,
.dt_overlays_none .thumb-main:hover .dt_thumb_btn,
.dt_overlays_hover .dt_thumb_btn,
.thumb-ext  /* by default, the extension is hidden */
{
  color: transparent;
  background-color: transparent;
}

/* Set default color icons, extension name and text infos on thumbnails and block infos */
.dt_thumb_btn,
.dt_overlays_always .thumb-ext
{
  color: @thumbnail_font_color;
}

/* Make inactive stars more discrete when not hovered */
.dt_overlays_always .thumb-star
{
  color: @thumbnail_font_color;
}

/* Set hover and selected color icons, extension name and text infos */
.dt_overlays_always .thumb-main:hover .thumb-ext,
.dt_overlays_always .thumb-main:selected .thumb-ext,
.dt_overlays_always .thumb-main:hover .dt_thumb_btn,
.dt_overlays_always .thumb-main:selected .dt_thumb_btn,
.dt_overlays_hover .thumb-main:hover .dt_thumb_btn,
.dt_overlays_hover .thumb-main:hover .thumb-group,
.dt_overlays_hover .thumb-main:hover .thumb-altered,
.dt_overlays_hover .thumb-main:hover #thumb-audio,
.dt_overlays_hover .thumb-main:hover .thumb-ext,
.dt_overlays_hover .thumb-main:selected .dt_thumb_btn,
.dt_overlays_hover .thumb-main:selected .thumb-group,
.dt_overlays_hover .thumb-main:selected .thumb-altered,
.dt_overlays_hover .thumb-main:selected #thumb-audio,
.dt_overlays_hover .thumb-main:selected .thumb-ext
{
  color: @thumbnail_font_color;
}

/* Set red reject icon when visible */
.dt_overlays_hover .thumb-main:hover .thumb-reject:active,
.dt_overlays_hover .thumb-main:hover .thumb-reject:hover,
.dt_overlays_hover .thumb-main:selected .thumb-reject:active,
.dt_overlays_hover .thumb-main:selected .thumb-reject:hover,
.dt_overlays_always .thumb-reject:active,
.dt_overlays_always .thumb-main:hover .thumb-reject:active,
.dt_overlays_always .thumb-main:selected .thumb-reject:active,
.dt_overlays_always .thumb-reject:hover
{
  color: red;
}

.dt_overlays_hover .thumb-main:hover .thumb-star,
.dt_overlays_hover .thumb-main:selected .thumb-star,
.dt_overlays_always .thumb-star
{
  background-color: rgba(0, 0, 0, 0.07);
}


/* Set stars icon when active */
.dt_overlays_hover .thumb-main:hover .thumb-star:active,
.dt_overlays_hover .thumb-main:selected .thumb-star:active,
.dt_overlays_always .thumb-star:active
{
  color: @thumbnail_font_color;
  background-color: @thumbnail_font_color;
}

/* Set stars icon hover effect */
.dt_overlays_hover .thumb-main:hover .thumb-star:hover,
.dt_overlays_always .thumb-main:hover .thumb-star:hover
{
  color: @thumbnail_star_hover_color;
  background-color: @thumbnail_star_bg_color;
}

/* Set hover group and audio effect */
.dt_overlays_always .thumb-main:hover .thumb-group:hover,
.dt_overlays_always .thumb-main:hover #thumb-audio:hover
{
  color: @thumbnail_fg_color;
}

/* Set rejected images */
.dt_thumbnail_rating_6 .thumb-image
{
  opacity: 0.35; /* only the transparency is used to fade the image drawing */
}

.dt_thumbnail_rating_6.thumb-main:hover .thumb-image
{
  opacity: 1.; /* take back image to normal state by removing transparency when hovering the image */
}
/* ... */

